--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ RPC_POLYGON=https://polygon-rpc.com
 RPC_ARBITRUM=https://arb1.arbitrum.io/rpc
 RPC_FANTOM=https://rpc.ftm.tools
 RPC_HARMONY=https://api.harmony.one
+ROLLUX_RPC_URL=https://rpc.rollux.com
 
 # Etherscan api keys for verification & download utils
 ETHERSCAN_API_KEY_MAINNET=
@@ -22,3 +23,4 @@ ETHERSCAN_API_KEY_AVALANCHE=
 ETHERSCAN_API_KEY_FANTOM=
 ETHERSCAN_API_KEY_OPTIMISM=
 ETHERSCAN_API_KEY_ARBITRUM=
+ETHERSCAN_API_KEY_ROLLUX="0x"
